--- a/Alif 4/alif4.html
+++ b/Alif 4/alif4.html
@@ -64,7 +64,7 @@
 
         </div>
         <div class="image">
-          <img src="20230203_232000.jpg">
+          <img src="20230203_231945.jpg">
           <p>Economy</p>
           <h3>Umrah Package</h3>
           <p style="color: rgb(33, 108, 248);">&#x24;7,000<sub style="color: black;">/person</sub></p>
@@ -72,6 +72,13 @@
         </div>
         </div>
       </div>
-      <footer>@Alif developers</footer>
-     </body>
+    </div>
+  
+    </div>
+    <div class="footer">
+    <footer><p>contact us:</p><p>+251924475152</p>
+      <p class="email">Email: osaseid1@gmail.com</p>     @Alifdevelopers</footer><br>
+    
+  </div>
+      </body>
     </html>
